# predpeso-api-python

./: .gitignore  README.md  pyproject.toml
src/: test_bank.db
src/migrations/: env.py
src/migrations/versions/: 147365f423cb_create_farm_table.py  17b4572f5b4b_create_animal_table.py  758368aa6512_create_history_animal_table.py  9175b2a9968b_fix_farm_table.py  b10d94c4c8a7_fix_animal_table.py  bd7bd39ebf9e_create_users_table.py  cf5d6d417054_create_farm_table.py  d4eed0055ed4_feat_image_url_mapped_str_mapped_column_.py  e5fd64c6dc03_fix_current_weight_for_int_animal_table.py  f2e0bd15ad90_fix_current_weight_for_float_animal_.py
src/predpeso/: app.py
src/predpeso/commons/: image.py  inference.py
src/predpeso/db/: base.py  connection.py
src/predpeso/models/: models.py
src/predpeso/routes/: animal_router.py  farm_router.py  user_router.py
src/predpeso/schemas/: animal_schemas.py  farm_schemas.py  history_schemas.py  user_schemas.py
src/predpeso/security/: jwt_token.py
src/predpeso/services/: animal_service.py  farm_service.py  user_service.py
tests/: test_app.py
